--- a/liste.html
+++ b/liste.html
@@ -21,7 +21,7 @@
 
 			<li class="menu-html"><a href="#">CV</a>
 				<ul class="submenu">
-					<li><a href=" https://ilyes943.github.io/siteCV/" target="f2">CV HTML</a></li>
+					<li><a href=" https://loukshan.github.io/tp_sitecv/" target="f2">CV HTML</a></li>
 					
 					
 				</ul>
