--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 </head>
-<body bgcolor="white">
+<body bgcolor="pink">
 <link rel="stylesheet" type="text/css" href="style1.css">
 
 
